--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-djangorestframework==3.6.2
+djangorestframework
 Django==1.11
 Pygments==2.1.3
 Markdown==2.6.3
@@ -10,3 +10,4 @@ Markdown==2.6.3
 # heroku config:set HEROKU=1
 psycopg2==2.6.1
 dj-database-url==0.3.0
+-e git+git@github.com:limdauto/drf_openapi.git@master#egg=drf_openapi
